Finished website, I need to repair overflow

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ button:hover {
   border-radius: 30px;
   flex-grow: 1;
   margin-right: 10%;
+  margin-left: 10px;
 }
 
 .header input:focus {
@@ -206,15 +207,84 @@ button:hover {
   grid-template-rows: 50px;
 }
 
-.tile {
-  background-color: white;
-  box-shadow: 2px 2px 5px #999;
-  border-radius: 10px;
-  border-left: 10px solid #f0b429;
-  margin: 0px 0px 15px 15px;
-}
-
 .left {
   display: grid;
   grid-template-rows: 50px 1fr 50px 1fr;
+}
+
+/* tiles */
+
+.tile {
+  padding: 30px 20px;
+  background-color: white;
+  box-shadow: 2px 2px 5px #999;
+  border-radius: 10px;
+  margin: 0px 0px 15px 15px;
+  display: grid;
+  grid-template-rows: min-content min-content 1fr;
+}
+
+.projects .tile {
+  border-left: 10px solid #f0b429;
+}
+
+.left .tile {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr min-content 1fr;
+  align-items: center;
+}
+
+.icons {
+  align-self: end;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 10px;
+}
+
+.tile h4 {
+  font-size: 1.8rem;
+  padding-bottom: 5px;
+}
+
+.tile h5 {
+  font-size: 1.6rem;
+  padding-bottom: 5px;
+}
+
+.tile p {
+  color: #555;
+}
+
+.tile hr {
+  margin: 10px 0px;
+}
+
+/* trending */
+
+.tile.trending {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.trending-user {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.trending-user img {
+  margin-right: 20px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  grid-row: 1 / 3;
+  justify-self: right;
+}
+
+.trending-user h5 {
+  align-self: end;
+}
+
+.trending-user p {
+  align-self: start;
 }
